--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <script src="../js/index.js"></script>
     <script src="../js/player.js"></script>
     <script src="../js/balls.js"></script>
+    <script src="../js/collision.js"></script>
 </head>
 <body>
 <div id="controls">
