--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,12 @@
     <script src="../js/player.js"></script>
     <script src="../js/balls.js"></script>
     <script src="../js/collision.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/1.1.28/howler.min.js"></script>
 </head>
 <body>
+<audio src="https://mainline.i3s.unice.fr/mooc/SkywardBound/assets/sounds/humbug.mp3"
+       id="audioPlayer">
+</audio>
 <div id="controls">
     <label for="nBalls">Number of balls: </label>
     <input type="number" min=1 max=30
