--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../css/styles.css"/>
     <script src="../js/index.js"></script>
     <script src="../js/player.js"></script>
-    <script src="../js/balls.js"></script>
+    <script src="../js/ball.js"></script>
     <script src="../js/collision.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/1.1.28/howler.min.js"></script>
 </head>
